CHG all layers & ADD builder, adapter